使用pdf.js和canvas模拟盖印章功能，并通过pdf.js实现pdf转png

--- a/src/main/resources/static/pdf_picture.html
+++ b/src/main/resources/static/pdf_picture.html
@@ -26,10 +26,12 @@
     <option value="assets/img/contact-icon-1.png">1号印章</option>
     <option value="assets/img/like.png">2号印章</option>
     <option value="assets/img/coffe-cup.png">3号印章</option>
+    <option value="assets/img/hongzhang.jpg">4号印章</option>
 </select>
 <input id="download" type="button" value="下载Canvas图片"/>
 <div id='pop'>
     <img id="img" src="">
+    <iframe src="//player.bilibili.com/player.html?aid=3979895&bvid=BV1Ls411Q75n&cid=6413562&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 </div>
 <script src="assets/js/jquery.js"></script>
 <script src="assets/pdfjs-dist/build/pdf.js"></script>
