添加redis 设置首次访问查询库并添加缓存，之后每次都走缓存 并上传后清除缓存数据

--- a/src/main/resources/static/pdf_picture.html
+++ b/src/main/resources/static/pdf_picture.html
@@ -36,6 +36,7 @@
 <script src="assets/js/jquery.js"></script>
 <script src="assets/pdfjs-dist/build/pdf.js"></script>
 <script src="assets/pdfjs-dist/build/pdf.worker.js"></script>
+<script src="assets/threejs/three.js"></script>
 <script src="assets/js/pdf_picture.js"></script>
 </body>
 </html>
