--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,7 +42,7 @@
 					<li><a href="#about">About</a></li>
 					<li><a href="#resume">Resume</a></li>
 					<li><a href="#service">Service</a></li>
-					<li><a href="#work">Work</a></li>
+					<li><a href="#3D">3D</a></li>
 					<li><a href="#clients-section">Testimonial</a></li>
 					<li><a href="#blog">Blog</a></li>
 					<li><a href="#contact">Contact</a></li>
@@ -414,7 +414,7 @@
 		</div>
      </div> <div class="tlinks">Collect from <a href="http://www.cssmoban.com/" >建站模板</a></div><!-- counter section end -->
      <!--portfolio section start-->
-     <section class="portfolio-area" id="work">
+     <section class="portfolio-area" id="3D">
      	<div class="container">
      		<div class="row">
      			<div class="col-md-6 col-md-offset-3 text-center">
@@ -681,7 +681,7 @@
      	<div class="preloader-inner">
      		<div class="cssload-box-loading"></div>
      	</div>
-     </div>
+     </div>main-menu
      <!--prealoader end-->
      <!--go to top start-->
      	<span class="go-top"><i class="fa fa-angle-double-up"></i></span>
