--- a/src/main/resources/static/uploadPage.html
+++ b/src/main/resources/static/uploadPage.html
@@ -5,6 +5,8 @@
     <title>Blog 上传</title>
     <!--Layui.css-->
     <link href="assets/layui/css/layui.css" rel="stylesheet"/>
+    <link href="assets/css/blog.css" rel="stylesheet"/>
+
 </head>
 <body>
 <form class="layui-form" action="">
@@ -36,7 +38,7 @@
         </div>
     </div>
 </div>
-
+<input type = "text"   />
 <!--layui js -->
 <script src="assets/layui/layui.js"></script>
 <script src="assets/js/jquery.js"></script>
