搜索哔哩哔哩页面修改 下载图片页面

--- a/src/main/resources/static/pdf_picture.html
+++ b/src/main/resources/static/pdf_picture.html
@@ -31,6 +31,7 @@
 <input id="download" type="button" value="下载Canvas图片"/>
 <div id='pop'>
     <img id="img" src="">
+    <input type="text" id ="bilibili_text"/><input type="button" value="搜索-B站" id ='bilibiliSearchBtn'>
     <iframe src="//player.bilibili.com/player.html?aid=3979895&bvid=BV1Ls411Q75n&cid=6413562&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 </div>
 <script src="assets/js/jquery.js"></script>
